--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.3.2",
+    "vue-cli-plugin-pug": "^2.0.0",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
@@ -17,6 +18,8 @@
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.1",
     "vite": "^4.3.5"
   }
 }
