--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "gsap": "^3.11.5",
     "vue": "^3.3.2",
     "vue-cli-plugin-pug": "^2.0.0",
     "vue-router": "^4.2.0"
